tests/files/flow_controller_tests/should_run/105.cmdr
x = 10;
print arccosh(x);