tests/files/flow_controller_tests/should_fail/098.cmdr
x = "cat";
print arccosh(x);